--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-authorization": "^0.3.2",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
