--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
     "@faker-js/faker": "7.6.0",
+    "@mapbox/search-js-react": "^1.0.0-beta.14",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "5.10.8",
     "@testing-library/jest-dom": "5.16.5",
@@ -22,7 +23,9 @@
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "2.1.4"
+    "web-vitals": "2.1.4",
+    "@react-buddy/ide-toolbox": "2.3.1",
+    "@react-buddy/palette-mui": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
